--- a/locales/en.json
+++ b/locales/en.json
@@ -6,6 +6,7 @@
     "name": "Name",
     "email": "Email",
     "send": "Send",
+    "draft": "Draft",
     "reset": "Reset",
     "write": "Write",
     "preview": "Preview",
@@ -15,11 +16,14 @@
     "latest": "Latest",
     "hot": "Hot",
     "unanswered": "Unanswered",
+    "searchresult": "Search Result",
     
     "threadlist": "Thread List",
     "thread": "Thread",
     "newthread": "New Thread",
 
+    "defaultThreadList": "Default thread list",
+    
     "help": "HELP",
     "settings": "Settings",
     "search": "Search"
